File structure changed

--- a/public/about.html
+++ b/public/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="main-header">
-<input class="back-button" type="button" value="BACK" onclick="history.back()"/> 
+<button class="back-button" onclick="history.back()">BACK</button>
 <div class="about-header">
   <h1>HEADER</h1>
 </div>
